Fix games/user dropdown spacings

--- a/src/components/common/dropdown/dropdown.css
+++ b/src/components/common/dropdown/dropdown.css
@@ -18,8 +18,6 @@
   border-bottom: var(--border);
 
   box-shadow: var(--box-shadow);
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
 }
 
 .right {
